Change feelds name and type